# list-to-clipboard

./: Pipfile  README.md  list  pyproject.toml
list_to_clipboard/: __init__.py  __main__.py  cli.py  core.py  file_history.py  rofi.py  types.py
